--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run tests
-        run: coverage run src/tests.py
+        run: coverage run tests.py
       - name: Tests report
         run: coverage report
